18480
This will be particularly annoying once the IDE integrates scaladoc support.
```scala
class PreSuper extends {
  /** bar */
  val foo = new Object
} with Object {}
```

it shows:
```scala
scaladoc.scala:4: error: only type definitions and concrete field definitions allowed in early object initialization section
  /** bar */
  ^
```
